<resources>
    <string name="app_name">UXMovil</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">AlarmiDani</string>
    <string name="classicAlarm">Alarma Clásica</string>
    <string name="CustomdAlarm">Alarma Personalizada</string>
    <string name="voiceAlarm">Alarma con Voz</string>
    <string name="listOfAlarms">Lista de alarmas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="alarmas">
        <item>Alarma Clásica1</item>
        <item>Alarma Clásica2</item>
        <item>Alarma con Voz1</item>
        <item>Alarma con Voz Diana</item>
        <item>Alarma con Personalizada5</item>
        <item>Alarma con Personalizada Hola mundo</item>
        <item>Alarma Clásica5</item>
    </string-array>
</resources>