<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="668dp"
        android:text="@string/title"
        android:textColor="@color/main_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_second2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Seleccione el tipo de alarma que desea agregar:"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/button_clasica"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/classicAlarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second2"
        app:layout_constraintVertical_bias="0.192" />

    <Button
        android:id="@+id/button_voz"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/voiceAlarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_clasica"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/button_per"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/CustomdAlarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_voz"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/button_lista"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/listOfAlarms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_per"
        app:layout_constraintVertical_bias="0.137" />

</androidx.constraintlayout.widget.ConstraintLayout>